# BrickBreaker

./: CMakeLists.txt  README.md  class_design.md  config.ini  profile.md  save.ini
include/: Game.h  GameState.h
include/Entities/: Ball.h  Brick.h  Entity.h  Paddle.h
include/Managers/: AssetManager.h  CollisionManager.h  LevelManager.h
include/States/: GameOverState.h  HelpState.h  MenuState.h  PauseState.h  PlayState.h
include/Utils/: Config.h  Utils.h
resources/levels/: level1.txt  level2.txt  level3.txt
src/: Game.cpp  GameState.cpp  main.cpp
src/Entities/: Ball.cpp  Brick.cpp  Entity.cpp  Paddle.cpp
src/Managers/: AssetManager.cpp  CollisionManager.cpp  LevelManager.cpp
src/States/: GameOverState.cpp  HelpState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp
src/Utils/: Config.cpp  Utils.cpp
